codama-macros/tests/codama_attribute/node_directive/unrecognized_node.fail.stderr
error: unrecognized node
 --> tests/codama_attribute/node_directive/unrecognized_node.fail.rs:3:15
  |
3 | #[codama(node(unrecognized_node(foo = 42)))]
  |               ^^^^^^^^^^^^^^^^^
