codama-macros/tests/codama_attribute/node_directive/unrecognized_node.fail.rs
use codama::codama;

#[codama(node(unrecognized_node(foo = 42)))]
pub struct Foo(usize);

fn main() {}
